--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   table_calendar: ^3.0.3
   simple_auth: ^2.0.10
   simple_auth_flutter: ^2.0.11
+  geocoder: ^0.2.1
+  injectable: ^1.5.3
+  geolocator: ^8.0.5
 
 dev_dependencies:
   flutter_test:
